Remove SecurityManager deprecation workarounds #SCL-20064 fixed
- Our own fork of nailgun version 1.3.0 does not call `System.setSecurityManager` on JDK 17 and above anymore.